--- a/Chess.html
+++ b/Chess.html
@@ -5,8 +5,8 @@
        <title>Chess 2D</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-	<script src="js1.js"></script>
-	<link rel="stylesheet" href="css1.css">
+	<script src="src/js1.js"></script>
+	<link rel="stylesheet" href="src/css1.css">
 </head>
 <body>
     <div id="container"></div>
